2007-06-05  Peter Bloomfield

	* libbalsa/mailbox.[ch]: new convenience methods
	libbalsa_mailbox_msgno_change_flags and
	libbalsa_mailbox_register_msgno.
	* libbalsa/message.[ch]: new convenience method
	libbalsa_message_change_flags.
	* libbalsa/send.c: use libbalsa_message_change_flags.
	* src/balsa-index.[ch]: replace BalsaIndex::current_message with
	BalsaIndex::current_msgno; new members
	BalsaIndex::has_selection_changed_idle and
	BalsaIndex::has_mailbox_changed_idle to avoid setting GObject
	data; new api balsa_index_selected_msgnos_{new,free}.
	* src/balsa-mblist.c: (bmbl_drag_cb): use new
	balsa_index_selected_msgnos_{new,free} api.
	* src/balsa-message.[ch]: use mailbox and msgno instead of
	message.
	* src/main-window.[ch]: ditto; use new
	balsa_index_selected_msgnos_{new,free} api.
	* src/message-window.[ch]: use mailbox and msgno instead of
	        message.
	* src/sendmsg-window.[ch]: ditto.

2007-06-03  Peter Bloomfield

	* libbalsa/mime.c: (unwrap_rfc2646): detect CRLF-terminated
	signature separator line.

2007-05-28  Peter Bloomfield

	* libbalsa/imap/pop3.c: (pop_get_uid): check for disconnection
	to avoid a failed assertion.

2007-05-27  Pawel Salek

	* src/sendmsg-window.c: Do not wrap for view, if flowed format is
	selected (Albrecht Dreß). 
	* src/balsa-index.c: extend msgno and size columns.
	* libbalsa/mailbox_imap.c: silence few devel warnings.
	* NEWS, configure.in: release 2.3.16.

2007-05-21  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_get_index_entry_expunged_cb),
	(lbm_get_index_entry): catch expunged and renumbered messages.
	* src/message-window.c: (message_window_move_message),
	(mw_set_selected): check BalsaIndex::current_msgno instead of
	BalsaIndex::current_message.

2007-05-11  Peter Bloomfield

	* libbalsa/html.c: (libbalsa_html_print),
	(libbalsa_html_print_get_pages_num): build on fc6, and on f7test
	--without-gtkprint.
	* libbalsa/html.h: ditto.

2007-05-10  Peter Bloomfield
